case study structure started, text and media alignment needs fixing

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ html, body {
 
 main {
     flex-grow: 1;
+    overflow: visible;
 }
 
 header {
@@ -42,9 +43,8 @@ header {
     line-height: 1; /* Ensures consistent alignment */
     display: inline-flex;
     align-items: center;
-    position: relative;
-    top: -0.25em;
-    margin-right: -1em;
+    position: fixed;
+    top: 1em;
     margin-left: 0.5em;
 }
 
@@ -169,7 +169,7 @@ header {
     text-transform: uppercase;
     font-weight: 300;
     font-size: 7vw;
-    margin-left: 1em;
+    margin-left: 1.25em;
     padding: 0;
     margin-top: 0.5em;
     display: inline-block;
@@ -450,6 +450,95 @@ a {
     text-decoration: none;
 }
 
+.sticky-container {
+    position: sticky;
+    top: 10vh;
+    width: 45%;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 9000;
+}
+
+#media-content img, #media-content video {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.media-caption {
+    text-align: center;
+    font-size: 0.9rem;
+    margin-top: 0.5rem;
+    color: gray;
+}
+
+.content {
+    width: 50%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5vh; /* Dynamically adjusts spacing for responsiveness */
+    gap: 2rem; /* Creates consistent spacing between the elements */
+}
+
+
+.case-section {
+    margin-bottom: 5rem;
+    font-weight: 300;
+    position: relative;
+    margin-top: 5vh;
+    padding-top: 550px; /* Adds space to push content below sticky */
+}
+
+.section-title {
+    color: white;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 2.5em;
+    margin-left: 1.6em;
+    line-height: 1;
+}
+
+.guide {
+    position: fixed;
+    right: 5rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.guide ul {
+    list-style: none;
+    padding: 0;
+}
+
+.guide li {
+    margin-bottom: 1rem;
+}
+
+.guide a {
+    text-decoration: none;
+    color: gray;
+    font-weight: 300;
+    font-size: 2em;
+}
+
+
+.guide-link.active {
+    color: #FF5733; /* Change to a color of your choice */
+}
+
+.case-text {
+    color: white;
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1.5;
+    width: 75%; /* Ensure it spans the available space */
+    text-align: left; /* Align text to the left */
+    word-wrap: break-word;
+}
 
 /* 
 media queries below for responsive design
